JEAP-5339: Retry recoverable failed message processing errors instead of sending them to the dlt.